--- a/html/template.html
+++ b/html/template.html
@@ -85,7 +85,7 @@
 	<div id="footer">
 		<!--Facebook Like and Share button-->
 		<div class="fb-like" data-href="http://relivethatmoment.herokuapp.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div><br/>
-		Created by: Qua Zi Xian and Tang Yu Long on XX July 2014
+		Created by: Qua Zi Xian and Tang Yu Long in July 2014
 	</div>
 	
 </body>
