Attempts to align fblogincheck item

--- a/html/template.html
+++ b/html/template.html
@@ -68,8 +68,9 @@
 					<li><a href="/user_guide">User Guide</a></li>
 					{{usrmenu}}
 				</ul>
-				<span class="fblogincheck" id="fblogincheck"></span>
 			</div>
+
+			<div class="collapse navbar-collapse" id="fblogincheck"></div>
 		</div>
 	</nav>
 
