--- a/html/login.html
+++ b/html/login.html
@@ -4,7 +4,9 @@
 	// This is called with the results from from FB.getLoginStatus().
 	function statusChangeCallback(response) {
 		if(response.status === 'connected') {
-			testAPI();
+			FB.api('/me', function(res){
+				document.getElementById('fblogincheck').innerHTML='Looged in as '+res.name+' on Facebook';
+			});
 		} else if(response.status === 'not_authorized'){}
 		else {}
 	}
@@ -51,18 +53,8 @@
     js = d.createElement(s); js.id = id;
     js.src = "//connect.facebook.net/en_US/sdk.js";
     fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
-
-  // Here we run a very simple test of the Graph API after login is
-  // successful.  See statusChangeCallback() for when this call is made.
-  function testAPI() {
-    console.log('Welcome!  Fetching your information.... ');
-    FB.api('/me', function(response) {
-      console.log('Successful login for: ' + response.name);
-      document.getElementById('fblogincheck').innerHTML =
-        'Logged in as ' + response.name + ' on Facebook';
-    });
-  }*/
+  }(document, 'script', 'facebook-jssdk'));*/
+  }
 </script>
 <form name="login_form" id="login_form" action="users/login" method="POST"
 onsubmit="return validate_login(event);">
