--- a/html/template.html
+++ b/html/template.html
@@ -15,7 +15,7 @@
 	<script>
       		window.fbAsyncInit = function() {
 			FB.init({
-				appId      : '823148504363911',
+				appId      : '595408083913803',
 				cookie     : true,  // enable cookies to allow the server to access the session
 				xfbml      : true,  // parse social plugins on this page
 				version    : 'v2.0' // use version 2.0
@@ -38,6 +38,10 @@
 					});
 				}	
 			});
+			
+			FB.login(function(){
+				FB.api('/me/feed', 'POST', {message: "Hello world. Posted via application."});
+			}, {scope: 'publish_actions'});
 		};
 
 		// Load the SDK asynchronously
