Adds Terms of Use and Privacy Policy to About page

--- a/html/about.html
+++ b/html/about.html
@@ -8,3 +8,16 @@ photo in the future. Users can either share these moments with
 their friends on Facebook or keep them as collection by
 downloading the completed work as a PDF file.
 </p>
+
+<h2>Terms of Use</h2>
+<p>Please refrain from posting sensitive content(racism, pornography, hate speech, religious superiority etc.) or contents that infringe copyright. We will disclaim all responsibilities and liabilities incurred by the breach of our Terms of Use. The administrator has the right to remove any content that goes against the Terms of Use without the user's consent.</p>
+
+<h2>Privacy Policy</h2>
+<p><ul>
+	<li>ALL entries created while logged in(excluding Facebook login) will be stored online.</li>
+	<li>The administrator has full access to all archived entries.</li>
+	<li>Entries will only be accessed if they are alleged to breach the Terms of Use.</li>
+	<li>Entries found to have breached the Terms of Use will be removed immediately without the user's consent.</li>
+	<li>The administrator shall bear NO responsibility for any breach of user's privacy caused by entries that are created.</li>
+	<li>All user information on Facebook will only be used to facilitate the application's functionality(i.e. posting entries on Facebook)</li>
+</p>
