Adds checkbox to signup form

--- a/html/create_entry.html
+++ b/html/create_entry.html
@@ -3,8 +3,8 @@
     allow file to be submitted as file"-->
 <div class="message" id="message">This entry will only be archived if the user
 is logged in at the time of creating this entry.<br/>
-Disclaimer: We are not responsible for any controversial/sensitive entries
-created using this application.</div>
+Please take not of our <a href="/about">Terms of Use and Privacy Policy</a> before proceeding.
+</div>
 <div class="error" id="error"></div>
 <form name="new_entry" action="upload_handler/submit" method="post" id="entry" onsubmit="validate_entry(event);" enctype="multipart/form-data">
 
