--- a/html/signup.html
+++ b/html/signup.html
@@ -1,6 +1,7 @@
 <!--Signup form-->
-<div class="message" id="message">Before you sign up, please take note that the
-admin is able to view all the entries archived as collection on this application. This only applies to entries created by logged in users.</div>
+<div class="message" id="message">
+Please read through the Terms of Use and Privacy Policy in our About page before proceeding.
+</div>
 <div class="error" id="error"></div>
 <form name="signup" id="signup" action="users/signup" method="POST"
 onsubmit="return validate_signup();">
@@ -19,6 +20,8 @@ onsubmit="return validate_signup();">
 	<label>Re-type password:</label>
 	<input type="password" name="re-passwd" size="30" placeholder="Must match password field" onkeyup="confirmPassword(this.value);">
 	<span id="confirmPassword"></span><br/>
+
+	<input type="checkbox" name="terms" value="agree">I agree to the <a href="/about">Terms of Use</a>.<br/>
 
 	<input type="submit" class="button" name="submit" value="Sign Up">
 </form>
