Applies jumbotron to about page

--- a/html/about.html
+++ b/html/about.html
@@ -1,4 +1,5 @@
 <!--Contents of About page-->
+<div class="jumbotron">
 <h2>About Us</h2>
 <p>This site is created by 2 NUS students as part of their
 Orbital project summer 2014. The aim is to help users easily
@@ -8,6 +9,7 @@ photo in the future. Users can either share these moments with
 their friends on Facebook or keep them as collection by
 downloading the completed work as a PDF file.
 </p>
+</div>
 
 <h2>Terms of Use</h2>
 <p>Please refrain from posting sensitive content(racism, pornography, hate speech, religious superiority etc.) or contents that infringe copyright. We will disclaim all responsibilities and liabilities incurred by the breach of our Terms of Use. The administrator has the right to remove any content that goes against the Terms of Use without the user's consent.</p>
