Changes styling for about page

--- a/html/about.html
+++ b/html/about.html
@@ -1,5 +1,5 @@
 <!--Contents of About page-->
-<div class="jumbotron">
+<div class="abt_text">
 <h2>About Us</h2>
 <p>This site is created by 2 NUS students as part of their
 Orbital project summer 2014. The aim is to help users easily
