Updates user guide page

--- a/html/user_guide.html
+++ b/html/user_guide.html
@@ -10,9 +10,10 @@ create a keepsake simply by filling in all the fields! It's that simple!
 
 <h3>Registering as a User</h3>
 When you sign up with us, we provide online storage of the keepsakes you created
-with us. Simply navigate to the "Sign Up" link at the drop box located at the top
-of the site, and register with us today! Note that entries created is stored on 
-our storage only if you are logged in.
+with us while logged in to our app. Simply click on the "Sign Up" link at the top of the page, and register with us today! Note that entries created is stored on our storage only if you are logged in. You can view and download your entries at the home page when you are logged in.
+
+<h3>Share Your Stories with Your Friends on Facebook(Coming Soon)</h3>
+Want to share the good moments in life with your friends on Facebook? Simply log in to Facebook through our <a href="/login">Login</a> page and your entry will be posted on Facebook when you submit your entry. Download and storing to online storage will not be affected.
 
 <h3>Like and Share on Facebook!</h3>
 Do like and share Relive That Moment on Facebook! These buttons are located at
