--- a/html/template.html
+++ b/html/template.html
@@ -39,9 +39,10 @@
 				}	
 			});
 			
-			FB.login(function(){
+			//Proven to be working, but pops up on every refresh
+			/*FB.login(function(){
 				FB.api('/me/feed', 'POST', {message: "Hello world. Posted via application."});
-			}, {scope: 'publish_actions'});
+			}, {scope: 'publish_actions'});*/
 		};
 
 		// Load the SDK asynchronously
