Adds Facebook login button to logged in menu

--- a/html/loggedinmenu.html
+++ b/html/loggedinmenu.html
@@ -2,3 +2,5 @@
 <li><a href="/create_entry">Create Entry</a></li>
 <li><a href="/change_passwd">Change Password</a><li>
 <li><a href="/users/logout">Logout</a></li>
+<!--FB Login Button-->
+<li><fb:login-button scope="public_profile" onlogin="checkLoginState();" auto-logout-link="true"></fb:login-button></li>
