--- a/html/template.html
+++ b/html/template.html
@@ -13,6 +13,22 @@
 
 <body>
 	<script>
+		function statusChangeCallback(response) {
+			if(response.status === 'connected') {
+				FB.api('/me', function(res){
+					document.getElementById('fblogincheck').innerHTML='Logged in as '+res.name+' on Facebook';
+				});
+			} else if(response.status === 'not_authorized'){}
+			else
+				document.getElementById('fblogincheck').innerHTML='';
+		}
+
+		function checkLoginState() {
+			FB.getLoginStatus(function(response) {
+				statusChangeCallback(response);
+			});
+		}
+
       		window.fbAsyncInit = function() {
 			FB.init({
 				appId      : '595408083913803',
@@ -21,26 +37,7 @@
 				version    : 'v2.0' // use version 2.0
 			});
 
-			// Now that we've initialized the JavaScript SDK, we call 
-			// FB.getLoginStatus().  This function gets the state of the
-			// person visiting this page and can return one of three states to
-			// the callback you provide.  They can be:
-			// 1. Logged into your app ('connected')
-			// 2. Logged into Facebook, but not your app ('not_authorized')
-			// 3. Not logged into Facebook and can't tell if they are logged into
-			//    your app or not.
-			// These three cases are handled in the callback function.
-
-			FB.getLoginStatus(function(response) {
-				if(response.status==='connected'){
-					FB.api('/me', function(res){
-						document.getElementById('fblogincheck').innerHTML='Logged in as '+res.name+' on Facebook';
-					});
-				}	
-				else if(response.status==='not_authorized'){}
-				else
-					document.getElementById('fblogincheck').innerHTML='';
-			});
+			checkLoginState();
 		};
 
 		// Load the SDK asynchronously
