--- a/html/loggedinmenu.html
+++ b/html/loggedinmenu.html
@@ -3,4 +3,4 @@
 <li><a href="/change_passwd">Change Password</a><li>
 <li><a href="/users/logout">Logout</a></li>
 <!--FB Login Button-->
-<li><fb:login-button scope="public_profile" onlogin="checkLoginState();" auto-logout-link="true"></fb:login-button></li>
+<li><fb:login-button scope="public_profile" onlogin="checkLoginState();" auto-logout-link="true" style="vertical-align: middle;"></fb:login-button></li>
