--- a/html/loggedinmenu.html
+++ b/html/loggedinmenu.html
@@ -1,6 +1,6 @@
 <!--Menu links for logged in users only-->
 <li><a href="/create_entry">Create Entry</a></li>
-<li><a href="/change_passwd">Change Password</a><li>
+<li><a href="/change_passwd">Change Password</a></li>
 <li><a href="/users/logout">Logout</a></li>
 <!--FB Login Button-->
 <li><fb:login-button scope="public_profile" onlogin="checkLoginState();" auto-logout-link="true" style="vertical-align: middle;"></fb:login-button></li>
