Adds reminder guide for signing up

--- a/html/signup.html
+++ b/html/signup.html
@@ -1,6 +1,7 @@
 <!--Signup form-->
 <div class="message" id="message">
-Please read through the Terms of Use and Privacy Policy in our About page before proceeding.
+Please read through the Terms of Use and Privacy Policy in our About page before proceeding.<br/>
+Please make sure the indicators for Name, Email and Password fields are 'Ok' before submitting. To update the indicator, please click outside the form after filling in that field.
 </div>
 <div class="error" id="error"></div>
 <form name="signup" id="signup" action="users/signup" method="POST"
