--- a/html/reset_password.html
+++ b/html/reset_password.html
@@ -1,11 +1,13 @@
 <!--Form for users wh forgot their passwords-->
 <p>An email with the new password will be sent to the email address
-provided in the form below.</p>
+provided in the form below.<br/>
+Click outside the form field after filling in email address to validate email address.
+</p>
 <div class="error" id="error"></div>
 <form name="reset_password" id="reset_password" action="users/reset_password" method="POST" onsubmit="return reset_passwd(event);">
 	<label>Username:</label>
 	<input type="text" name="name" size="30"><br/>
 	<label>Email:</label>
-	<input type="text" name="email" size="30" onkeyup="validate_email(this.value);"><span id="checkEmail"></span><br/>
+	<input type="text" name="email" size="30" onchange="validate_email(this.value);"><span id="checkEmail"></span><br/>
 	<input type="submit" name="submit_button" value="Send">
 </form>
