--- a/html/template.html
+++ b/html/template.html
@@ -36,7 +36,7 @@
 				xfbml      : true,  // parse social plugins on this page
 				version    : 'v2.0' // use version 2.0
 			});
-
+			alert("FB initialised");
 			checkLoginState();
 		};
 
