--- a/html/template.html
+++ b/html/template.html
@@ -37,14 +37,16 @@
 				version    : 'v2.0' // use version 2.0
 			});
 			
-			FB.getLoginStatus(function(response){
+			checkLoginState();
+
+			/*FB.getLoginStatus(function(response){
 				if(response.status==='connected')
 					FB.api('/me', function(res){
 						document.getElementById('fblogincheck').innerHTML=res.name;
 					});
 				else
 					document.getElementById('fblogincheck').innerHTML='';
-			});
+			});*/
 		};
 
 		// Load the SDK asynchronously
